Fix spacing of headers, footers, and photo

--- a/lbox.css
+++ b/lbox.css
@@ -19,7 +19,7 @@ img.foreground {
   transition: opacity 0.5s ease 0.1s;
 }
 
-#lboxHeader, #lboxFooter {
+.lbox-header, .lbox-footer {
   display: none;
   position: fixed;
 
@@ -29,7 +29,7 @@ img.foreground {
   color: white;
   background-color: #00000040;
 
-  z-index: 60;
+  z-index: 80;
 }
 
 img.visible {
